# NJU-AP-2026-Spring-PA-Synera

./: .clang-format  .gitignore  CMakeLists.txt  PA说明文档.md  PLAN.md  README.md  Raylib_Cpp23_设计文档.md  UIdesign.md
assets/data/: combat_actions.json  combat_animations.json
assets/fonts/: minecraftia.fnt
src/: main.cpp
src/app/: GameApp.cpp  GameApp.hpp  GameConfig.hpp
src/board/: Bench.cpp  Bench.hpp  Board.cpp  Board.hpp  HexGrid.hpp  Pathfinder.cpp  Pathfinder.hpp
src/config/: AnimationConfig.hpp  CombatActionCatalog.cpp  CombatActionCatalog.hpp  CombatAnimationCatalog.cpp  CombatAnimationCatalog.hpp  EquipmentConfig.hpp  GameConfig.hpp  RoundConfig.hpp  ShopConfig.hpp
src/core/: Ability.cpp  Ability.hpp  AbilityContext.cpp  AbilityContext.hpp  Contract.hpp  GameState.cpp  GameState.hpp  Metadata.cpp  Metadata.hpp  Placement.hpp  Player.cpp  Player.hpp  Shop.cpp  Shop.hpp  ShopOffer.hpp  Types.hpp  Unit.cpp  Unit.hpp  UnitCatalog.cpp  UnitCatalog.hpp
src/core/abilities/: BasicAbilities.cpp  BasicAbilities.hpp
src/systems/: CombatEvents.hpp  CombatSystem.cpp  CombatSystem.hpp  EconomySystem.cpp  EconomySystem.hpp  EquipmentSystem.cpp  EquipmentSystem.hpp  RoundSystem.cpp  RoundSystem.hpp  SaveSystem.cpp  SaveSystem.hpp  ShopPool.cpp  ShopPool.hpp  ShopSystem.cpp  ShopSystem.hpp  SynergySystem.cpp  SynergySystem.hpp  UpgradeSystem.cpp  UpgradeSystem.hpp
src/ui/: CombatAnimationController.cpp  CombatAnimationController.hpp  GameWindow.cpp  GameWindow.hpp  GridItem.cpp  GridItem.hpp  InputController.cpp  InputController.hpp  Layout.cpp  Layout.hpp  ModalFactory.cpp  ModalFactory.hpp  RenderAssets.cpp  RenderAssets.hpp  Renderer.cpp  Renderer.hpp  UiDrawing.cpp  UiDrawing.hpp  UiState.hpp  UiTheme.hpp  UnitItem.cpp  UnitItem.hpp
tests/: BoardTests.cpp  CombatActionCatalogTests.cpp  CombatAnimationCatalogTests.cpp  CombatAnimationControllerTests.cpp  CombatSystemTests.cpp  EconomySystemsTests.cpp  GameStatePlacementTests.cpp  InputControllerTests.cpp  MetadataTests.cpp  RoundSystemTests.cpp  SaveSystemTests.cpp  ShopTests.cpp  UnitCatalogTests.cpp
